#231 New experiment UI design

--- a/webapp/css/variables.less
+++ b/webapp/css/variables.less
@@ -14,6 +14,7 @@
 @colorLink: #b9c680;
 
 @radius: 5px;
+@borderRadius: 4px;
 @gutter: 16px;
 @iconPadding: 12px;
 @fontSizePanels: 16px;
@@ -24,5 +25,10 @@
 @canvasBgDark: #191919;
 @canvasBgLight: white;
 
+@experimentInputColor:rgba(255, 255, 255, 0.1);
 @experimentGrey: #A8A5A5;
+@experimentFieldColor: #565656;
+@experimentSvgcolor: #989898;
+@experimentlabelcolor: #989898;
+@experimentAutomcompleteBorder: #727272;
 
