--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -594,3 +594,65 @@ div.flexlayout__layout {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+.editExperimentContainer {
+  .editExperimentContent {
+    .MuiTypography-body2 {
+      opacity: 0.54;
+    }
+  }
+  .MuiOutlinedInput-root {
+    background: @experimentInputColor;
+  }
+  .MuiFilledInput-root {
+    border-radius: @borderRadius;
+    background: @experimentInputColor;
+  }
+  .MuiFormLabel-root {
+    color: #FFF;
+    opacity: 0.54;
+  }
+  .MuiInputLabel-filled.MuiInputLabel-shrink {
+    color: @experimentlabelcolor;
+    opacity: 0.87;
+  }
+  .editExperimentGroup {
+    background: #2C2C2C;
+    .MuiFilledInput-root {
+      background: @experimentFieldColor;
+    }
+    .MuiOutlinedInput-root {
+      background: @experimentFieldColor;
+    }
+  }
+}
+.MuiAutocomplete-popper {
+  margin: -6px 0 0;
+  .MuiPaper-root {
+    box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);    
+    border-radius: 0 0 @borderRadius @borderRadius;
+    border-top: 1px solid @experimentAutomcompleteBorder;
+  }
+  .MuiAutocomplete-option {
+    color: @textColor;
+    padding-left: @gutter / 2;
+    padding-right: @gutter / 2;
+  }
+  .MuiSvgIcon-root {
+    color: @experimentSvgcolor;
+  }
+}
+
+.MuiPopover-root {
+  .MuiPaper-root {
+    .MuiList-root {
+      .MuiMenuItem-gutters {
+        padding-left: @gutter;
+        padding-right: @gutter;
+      }
+    }
+  }
+}
+
+.MuiPopover-experiment {
+  width: @gutter * 7;
+}
