#231 Design updates from figma, scrollbar for groupped and whole area

--- a/webapp/css/variables.less
+++ b/webapp/css/variables.less
@@ -31,4 +31,4 @@
 @experimentSvgcolor: #989898;
 @experimentlabelcolor: #989898;
 @experimentAutomcompleteBorder: #727272;
-
+@errorFieldBorder: #F2453D;
