--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -616,7 +616,17 @@ div.flexlayout__layout {
     opacity: 0.87;
   }
   .editExperimentGroup {
-    background: #2C2C2C;
+    .scrollbar {
+      &::-webkit-scrollbar-thumb {
+        background: @secondaryColor;
+        border-left: @radius solid @bgDarkest;
+        border-right: @radius solid @bgDarkest;
+      }
+      &::-webkit-scrollbar {
+        width: @gutter;
+      }
+    }
+    background: @bgDarkest;
     .MuiFilledInput-root {
       background: @experimentFieldColor;
     }
@@ -624,9 +634,28 @@ div.flexlayout__layout {
       background: @experimentFieldColor;
     }
   }
+  .editExpermentWarning {
+    .MuiTypography-root {
+      color: @experimentlabelcolor;
+    }
+  }
+  .MuiFilledInput-root {
+    border: 1px solid transparent;
+    &.Mui-error {
+      border-color: @errorFieldBorder;
+      box-shadow: 0 0 0 2px rgba(242, 69, 61, 0.2);
+    }
+  }
+  .MuiFormHelperText-contained {
+    margin-left: 0;
+  }
+  .MuiFormHelperText-root {
+    color: @errorFieldBorder;
+    font-size: 0.875rem;
+    line-height: 100%;
+  }
 }
 .MuiAutocomplete-popper {
-  margin: -6px 0 0;
   .MuiPaper-root {
     box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);    
     border-radius: 0 0 @borderRadius @borderRadius;
@@ -634,25 +663,8 @@ div.flexlayout__layout {
   }
   .MuiAutocomplete-option {
     color: @textColor;
-    padding-left: @gutter / 2;
-    padding-right: @gutter / 2;
   }
   .MuiSvgIcon-root {
     color: @experimentSvgcolor;
   }
-}
-
-.MuiPopover-root {
-  .MuiPaper-root {
-    .MuiList-root {
-      .MuiMenuItem-gutters {
-        padding-left: @gutter;
-        padding-right: @gutter;
-      }
-    }
-  }
-}
-
-.MuiPopover-experiment {
-  width: @gutter * 7;
 }
