#231 PR comments - replace with constants, spelling fixes, use Delete dialog

--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -634,7 +634,7 @@ div.flexlayout__layout {
       background: @experimentFieldColor;
     }
   }
-  .editExpermentWarning {
+  .editExperimentWarning {
     .MuiTypography-root {
       color: @experimentlabelcolor;
     }
