#235 Collpase/Expand Icon

--- a/webapp/css/tree.less
+++ b/webapp/css/tree.less
@@ -849,12 +849,12 @@
       .rst__rowTitle {
         font-weight: normal;
       }
-      // .rst__expandButton {
-      //   .expandIcon;
-      // }
-      // .rst__collapseButton {
-      //   .collapseIcon;
-      // }
+      .rst__expandButton {
+        .expandIcon;
+      }
+      .rst__collapseButton {
+        .collapseIcon;
+      }
       .rst__rowContents{
         &:hover {
           color: @textColor !important;
