#231 PR comments spell check

--- a/webapp/css/variables.less
+++ b/webapp/css/variables.less
@@ -14,7 +14,6 @@
 @colorLink: #b9c680;
 
 @radius: 5px;
-@borderRadius: 4px;
 @gutter: 16px;
 @iconPadding: 12px;
 @fontSizePanels: 16px;
@@ -28,7 +27,7 @@
 @experimentInputColor:rgba(255, 255, 255, 0.1);
 @experimentGrey: #A8A5A5;
 @experimentFieldColor: #565656;
-@experimentSvgcolor: #989898;
-@experimentlabelcolor: #989898;
-@experimentAutomcompleteBorder: #727272;
+@experimentSvgColor: #989898;
+@experimentLabelColor: #989898;
+@experimentAutocompleteBorder: #727272;
 @errorFieldBorder: #F2453D;
