--- a/webapp/css/variables.less
+++ b/webapp/css/variables.less
@@ -14,6 +14,7 @@
 @colorLink: #b9c680;
 
 @radius: 5px;
+@borderWidth: 4px;
 @gutter: 16px;
 @iconPadding: 12px;
 @fontSizePanels: 16px;
@@ -39,7 +40,7 @@
   height: 0;
   border-left: @borderWidth solid transparent;
   border-right: @borderWidth solid transparent;
-  border-top: @borderWidth solid @experimentSvgcolor;
+  border-top: @borderWidth solid @experimentSvgColor;
   border-radius: 0;
   margin-left: @gutter / 2;
   padding: 0;
@@ -52,7 +53,7 @@
   height: 0;
   border-top: @borderWidth solid transparent;
   border-bottom: @borderWidth solid transparent;
-  border-left: @borderWidth solid @experimentSvgcolor;
+  border-left: @borderWidth solid @experimentSvgColor;
   border-radius: 0;
   margin-left: @gutter / 2;
 }
