--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -582,3 +582,9 @@ div.flexlayout__layout {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+body {
+  .MuiTable-root {
+    border-collapse: separate;
+  }
+}
