#417 various fixes to the layout

--- a/webapp/css/flexlayout.less
+++ b/webapp/css/flexlayout.less
@@ -86,6 +86,8 @@ div.flexlayout__layout {
     background-color: @bgDarker; //color-light
   }
   .flexlayout__border_inner_bottom {
+    // position: fixed !important;
+    // top: 100% !important;
     position: fixed;
     bottom: -100px;
     left: 0;
