--- a/webapp/css/flexlayout.less
+++ b/webapp/css/flexlayout.less
@@ -85,11 +85,9 @@ div.flexlayout__layout {
   .flexlayout__tabset-selected {
     background-color: @bgDarker; //color-light
   }
-  .flexlayout__border_inner_bottom {
-    // position: fixed !important;
-    // top: 100% !important;
-    position: fixed;
-    bottom: -100px;
+  .flexlayout__border_bottom {
+    position: fixed !important;
+    top: 110% !important;
     left: 0;
     padding-left: @gutter / 2;
     border-top-right-radius: @radius;
