#441 UI updates to fix the style updates from version change

--- a/webapp/css/flexlayout.less
+++ b/webapp/css/flexlayout.less
@@ -27,6 +27,7 @@ div.flexlayout__layout {
 
   .flexlayout__tabset_tabbar_outer {
     background-color: transparent;
+    left: -0.125rem;
   }
 
   .flexlayout__tabset_tabbar_outer_top {
@@ -99,9 +100,9 @@ div.flexlayout__layout {
     border-top-left-radius: @radius;
     color: @textColor;
     display: flex;
+    margin: 0 0.1875rem 0 0.125rem;
     align-items: flex-start;
-    margin-right: 3px;
-    margin-top: 0px;
+    line-height: 1.42857143;
     &.flexlayout__tab_button--selected {
       background-color: @bgRegular; //was bgDark
 
