--- a/webapp/css/variables.less
+++ b/webapp/css/variables.less
@@ -33,3 +33,6 @@
 @experimentLabelColor: #989898;
 @experimentAutocompleteBorder: #727272;
 @errorFieldBorder: #F2453D;
+
+@fabDisableBg: rgba(255, 255, 255, 0.12);
+@fabDisableColor: rgba(255, 255, 255, 0.3);
