--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -14,6 +14,7 @@ html {
   }
   body {
     background: @bgDarker;
+    line-height: 1.42857143;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   }
 }
