#447 Rxd UI updates

--- a/webapp/css/flexlayout.less
+++ b/webapp/css/flexlayout.less
@@ -214,6 +214,9 @@ div.flexlayout__layout {
   &::-webkit-scrollbar {
     width: @gutter / 2;
   }
+  &::-webkit-scrollbar:horizontal {
+    height: @gutter / 2;
+  }
 }
 
 .flexlayout__tab:hover {
