--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -562,6 +562,9 @@ div.flexlayout__layout {
   overflow-y: auto;
   flex: 1;
 }
+.spacechild {
+  padding: 5px;
+}
 [class*="makeStyles-closeDrawer-"] {
   .drawerList .MuiListItemText-root {
     visibility: hidden;
