#523 Improve experiments reload and polling logic
The polling now is performed only if there are running experiments

--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -594,6 +594,7 @@ body {
   }
 
   .MuiBackdrop-root {
+    background-color: rgba(0, 0, 0, 0.6) !important;
     .MuiGrid-root {
       display: block;
       width: auto;
