--- a/webapp/css/variables.less
+++ b/webapp/css/variables.less
@@ -38,3 +38,4 @@
 @fabDisableColor: rgba(255, 255, 255, 0.3);
 @navShadow: rgba(255, 255, 255, 0.2);
 @tabsTextColor: rgba(255, 255, 255, 0.7);
+@tutorialShadow: 0px 10px 60px rgba(0, 0, 0, 0.5);
